# DOIT_AI_BluFi

./: CMakeLists.txt  README.md  sdkconfig.defaults
components/doit_blufi/: CMakeLists.txt  doit_blufi.c  doit_blufi.h
main/: Kconfig.projbuild  application.cc  ota.cc
main/audio_codecs/: vb6824_audio_codec.cc
main/boards/common/: wifi_board.cc
main/boards/doit-ai-02-kit-lcd/: config.h  doit-ai-02-kit-lcd.cc
